[project]
name = "composition-advisor-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "composition-advisor",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "python-multipart>=0.0.24",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv.sources]
composition-advisor = { git = "https://github.com/Arimuri/ITBS_TAMANEGI-SENSEI.git", subdirectory = "composition_advisor" }
